FIX: missing players: char set utf8mb4 vs utf8mb3; higher limit 500 instead 20 or 100; player filter 'same' as old php code
