# docs/swagger.yaml
@@ -88,8 +88,8 @@ paths:
           schema:
             type: integer
             minimum: 1
-            maximum: 100
-            default: 20
+            maximum: 500
+            default: 500
         - name: offset
           in: query
           description: Number of results to skip
@@ -237,8 +237,8 @@ paths:
           schema:
             type: integer
             minimum: 1
-            maximum: 100
-            default: 20
+            maximum: 500
+            default: 500
         - name: offset
           in: query
           description: Number of results to skip
@@ -354,8 +354,8 @@ paths:
           schema:
             type: integer
             minimum: 1
-            maximum: 100
-            default: 20
+            maximum: 500
+            default: 500
         - name: offset
           in: query
           description: Number of results to skip
@@ -459,8 +459,8 @@ paths:
           schema:
             type: integer
             minimum: 1
-            maximum: 100
-            default: 20
+            maximum: 500
+            default: 500
         - name: offset
           in: query
           description: Number of results to skip
@@ -569,8 +569,8 @@ paths:
           schema:
             type: integer
             minimum: 1
-            maximum: 100
-            default: 20
+            maximum: 500
+            default: 500
         - name: format
           in: query
           description: Response format
@@ -631,8 +631,8 @@ paths:
           schema:
             type: integer
             minimum: 1
-            maximum: 100
-            default: 20
+            maximum: 500
+            default: 500
         - name: offset
           in: query
           description: Number of results to skip
